# AP1-algorithms

./: AStar.h  BestFirstSearch.h  BreadhFirstSearch.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  ISearchable.h  ISearcher.h  Matrix.h  MinHeap.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  Searcher.h  Server.cpp  Server.h  Solver.cpp  Solver.h  State.h  StringReverser.cpp  StringReverser.h  main.cpp
